fixes a bug where the meta options weren't blurring on card editor view

--- a/imports/ui/pages/scene/build.scss
+++ b/imports/ui/pages/scene/build.scss
@@ -1186,6 +1186,11 @@ $cooldownHeight: 86px;
 // Modal for editing parts of the scene
 .scenebuilder.editor-open {
   filter: blur(10px);
+
+  ~ .scenebuilder__share,
+  ~ .scenebuilder__meta-editor {
+    filter: blur(10px);
+  }
 }
 .scenebuilder__editor-modal {
   position: fixed;
@@ -1487,6 +1492,8 @@ $playerHandScale: 0.4;
   transform: translateX(-50%);
   width: 1000px;
 
+  transition: filter 300ms;
+
   display: flex;
 
   & > * {
@@ -1570,6 +1577,8 @@ $playerHandScale: 0.4;
 
   text-align: center;
   margin-bottom: 1rem;
+
+  transition: filter 300ms;
 }
 
 .share__options {
